--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.0.2",
     "element-ui": "^2.0.11",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
