--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.16",
+    "vue-amap": "^0.5.4",
+    "vue-quill-editor": "^3.0.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
