--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.5.16",
     "vue-amap": "^0.5.4",
     "vue-quill-editor": "^3.0.5",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
